# ai-spec-driven

./: .gitignore  README.md  init.py  pyproject.toml  spec-agent  spec-agent-init.sh  spec_agent_env.example
docs/: SEMANTIC_INDEXING.md
mcp-config-examples/: README.md  claude-desktop-config.json  cursor-mcp.json  run_ticket_workflow.json
scripts/: serena_language_detection.py  serena_mcp_client.py  serena_mcp_integration.py  serena_patch_wrapper.py  serena_semantic_tree.py  serena_simple.py
src/spec_agent/: __init__.py  __main__.py  mcp_server.py  test.xml
src/spec_agent/cli/: app.py  chat.py  dashboard.py
src/spec_agent/config/: settings.py
src/spec_agent/domain/: models.py
src/spec_agent/persistence/: store.py
src/spec_agent/services/context/: indexer.py  retriever.py  semantic_indexer.py
src/spec_agent/services/integrations/: __init__.py  serena_client.py
src/spec_agent/services/llm/: __init__.py  base.py  openai_client.py
src/spec_agent/services/patches/: engine.py
src/spec_agent/services/planning/: clarifier.py  plan_builder.py  refactor_advisor.py
src/spec_agent/tracing/: reasoning_log.py
src/spec_agent/web/: __init__.py  server.py
src/spec_agent/workflow/: orchestrator.py
templates/: README.md  index-schema.json
tests/: mocks.py  test_bounded_index_task.py  test_chat_cached_index.py  test_context_indexer.py  test_domain_models.py  test_index_command.py  test_patch_workflow.py  test_plan_markdown_export.py  test_scope_inference.py  test_spec_bulk_actions.py  test_test_suggester.py  test_two_pass_plan.py
(+4 files in other folders)
