[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "spec-driven-development-agent"
version = "0.1.0"
description = "Specification-driven change-management agent for legacy monorepos."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ina / AI Learning"}]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "pydantic>=2.9",
    "networkx>=3.4",
    "pyyaml>=6.0.2",
    "openai>=1.50.2",
    "pathspec>=0.12.1",
    "prompt_toolkit>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6"
]
serena = [
    "mcp>=1.12.3"
]

[project.scripts]
spec-agent = "spec_agent.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"


